--- a/index.html
+++ b/index.html
@@ -11,46 +11,46 @@
 </head>
 
 <body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix"><a class="more_inf"
-      href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <div id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+  <main class="main">
+    <div class="main__item add" id="topSectionForAddingElementToList">
+      <label class="add__title" for="new-task">Add Item</label>
+      <div class="add__item">
+        <input class="add__input task" id="new-task" type="text">
+        <button class="add__button button" >Add</button>
       </div>
     </div>
-    <section>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="X"></button>
+    <section class="main__item todo">
+      <h3 class="todo__title">Todo</h3>
+      <ul class="todo__list list" id="incompleteTasks">
+        <li class="list__item">
+          <input class="item__checkbox" type="checkbox">
+          <label class="item__task task">Pay Bills</label>
+          <input class="item__input task" type="text" >
+          <button class="item__edit edit">Edit</button>
+          <button class="item__delete delete"><img src="./remove.svg" alt="X"></button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg" alt="X"></button>
+        <li class="list__item editMode">
+          <input class="item__checkbox" type="checkbox">
+          <label class="item__task task">Go Shopping</label>
+          <input class="item__input task" type="text" value="Go Shopping" >
+          <button class="item__edit edit">Save</button>
+          <button class="item__delete delete"><img src="./remove.svg" alt="X"></button>
         </li>
       </ul>
     </section>
-    <section>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="X"></button>
+    <section class="main__item complited">
+      <h3 class="complited__title">Completed</h3>
+      <ul class="complited__list list" id="completed-tasks">
+        <li class="list__item">
+          <input class="item__checkbox" type="checkbox" checked>
+          <label class="item__task task">See the Doctor</label>
+          <input class="item__input task" type="text">
+          <button class="item__edit edit">Edit</button>
+          <button class="item__delete delete"><img src="./remove.svg" alt="X"></button>
         </li>
       </ul>
     </section>
