refactor(basic-3.1,3.2,3.3): final edit of class and id names

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <div class="main__item add" id="topSectionForAddingElementToList">
+    <div class="main__item add">
       <label class="add__title" for="new-task">Add Item</label>
       <div class="add__item">
         <input class="add__input task" id="new-task" type="text">
@@ -25,7 +25,7 @@
     </div>
     <section class="main__item todo">
       <h3 class="todo__title">Todo</h3>
-      <ul class="todo__list list" id="incompleteTasks">
+      <ul class="todo__list list" id="incomplete-tasks">
         <li class="list__item">
           <input class="item__checkbox" type="checkbox">
           <label class="item__task task">Pay Bills</label>
