--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Todo App</title>
 </head>
 
-<body>
+<body class="body">
   <header class="header">
     <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
     <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
@@ -30,15 +30,15 @@
           <input class="item__checkbox" type="checkbox">
           <label class="item__task task">Pay Bills</label>
           <input class="item__input task" type="text" >
-          <button class="item__edit edit">Edit</button>
-          <button class="item__delete delete"><img src="./remove.svg" alt="X"></button>
+          <button class="item__edit edit button">Edit</button>
+          <button class="item__delete delete button"><img src="./remove.svg" alt="X"></button>
         </li>
         <li class="list__item editMode">
           <input class="item__checkbox" type="checkbox">
           <label class="item__task task">Go Shopping</label>
           <input class="item__input task" type="text" value="Go Shopping" >
-          <button class="item__edit edit">Save</button>
-          <button class="item__delete delete"><img src="./remove.svg" alt="X"></button>
+          <button class="item__edit edit button">Save</button>
+          <button class="item__delete delete button"><img src="./remove.svg" alt="X"></button>
         </li>
       </ul>
     </section>
@@ -49,8 +49,8 @@
           <input class="item__checkbox" type="checkbox" checked>
           <label class="item__task task">See the Doctor</label>
           <input class="item__input task" type="text">
-          <button class="item__edit edit">Edit</button>
-          <button class="item__delete delete"><img src="./remove.svg" alt="X"></button>
+          <button class="item__edit edit button">Edit</button>
+          <button class="item__delete delete button"><img src="./remove.svg" alt="X"></button>
         </li>
       </ul>
     </section>
