--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
           <label class="item__task task">Pay Bills</label>
           <input class="item__input task" type="text" >
           <button class="item__edit edit button">Edit</button>
-          <button class="item__delete delete button"><img src="./remove.svg" alt="X"></button>
+          <button class="item__delete delete button"><img src="./remove.svg" alt="x"></button>
         </li>
         <li class="list__item editMode">
           <input class="item__checkbox" type="checkbox">
           <label class="item__task task">Go Shopping</label>
           <input class="item__input task" type="text" value="Go Shopping" >
           <button class="item__edit edit button">Save</button>
-          <button class="item__delete delete button"><img src="./remove.svg" alt="X"></button>
+          <button class="item__delete delete button"><img src="./remove.svg" alt="x"></button>
         </li>
       </ul>
     </section>
