refactor(basic-1.2): remove uppercase

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
@@ -50,7 +50,7 @@
           <label class="item__task task">See the Doctor</label>
           <input class="item__input task" type="text">
           <button class="item__edit edit button">Edit</button>
-          <button class="item__delete delete button"><img src="./remove.svg" alt="X"></button>
+          <button class="item__delete delete button"><img src="./remove.svg" alt="x"></button>
         </li>
       </ul>
     </section>
